--- a/src/components/card-list/card-list.style.css
+++ b/src/components/card-list/card-list.style.css
@@ -5,3 +5,23 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
 }
+
+@media only screen 
+and (min-device-width: 320px) 
+and (max-device-width: 768px)
+and (-webkit-min-device-pixel-ratio: 1) {
+
+    .card-list{
+        grid-template-columns: 1fr;
+    }
+}
+
+@media only screen 
+  and (min-device-width: 1024px) 
+  and (max-device-width: 1250px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+    .card-list{
+        grid-template-columns: 1fr 1fr;
+    }
+  }
