--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -3,7 +3,9 @@
   border: none;
   outline: none;
   padding: 10px;
-  width: 150px;
+  width: 350px;
   line-height: 30px;
   margin-bottom: 30px;
+  border-radius: 10px;
+  border: 1px solid #000000;
 }
