--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(
     to left,
-    rgba(7, 27, 82, 1) 0%,
-    rgba(0, 128, 128, 1) 100%
+    rgba(233, 135, 8, 0.883) 0%,
+    rgb(235, 231, 15) 100%
   );
 }
 
